--- a/freezframe/examples/index.html
+++ b/freezframe/examples/index.html
@@ -110,7 +110,7 @@ button:active {
 <p>responsive,<br />jQuery plugin.</p>
 <img class="my_class_4 freezeframe-responsive" src="http://static1.squarespace.com/static/51c748abe4b0c275d0aa86bf/56141f2be4b0a4afc2d17505/56141f47e4b00b973f0ec806/1444159323808/Ecco-Domani-Summer-Cinemagraph-980px.gif?format=1000w" />
 
-<p>cinemagraphs by <a href="http://www.cinemagraphs.com/">cinemagraphs.com</a>
+    <p>cinemagraphs by <a href="http://www.cinemagraphs.com/">cinemagraphs.com</a></p>
 
 </body>
 </html>
